--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 
 # Appearance
 
-theme: minimal
+theme: forest
 day_night: true
 font: ''
 font_size: L
@@ -20,8 +20,8 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: jesse.pirini@vuw.ac.nz
+phone: 04 463 xxxx
 address:
   street: 450 Serra Mall
   city: Stanford
